[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Misc/BΞTΛ.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Misc/FullScreen.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Misc/Background.png" type="Texture" id=4]
[ext_resource path="res://Etc/Tile.tres" type="TileSet" id=5]
[ext_resource path="res://Scenes/Sword.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/TitleHero.gd" type="Script" id=7]
[ext_resource path="res://Hero/Hero [1].png" type="Texture" id=8]
[ext_resource path="res://Hero/Hero [2].png" type="Texture" id=9]
[ext_resource path="res://Hero/Hero [3].png" type="Texture" id=10]
[ext_resource path="res://Hero/Hero [4].png" type="Texture" id=11]
[ext_resource path="res://Hero/Hero [5].png" type="Texture" id=12]
[ext_resource path="res://Hero/Hero [6].png" type="Texture" id=13]
[ext_resource path="res://Hero/Hero [7].png" type="Texture" id=14]
[ext_resource path="res://Hero/Hero [8].png" type="Texture" id=15]
[ext_resource path="res://Lighting/AlwaysOnLight.tscn" type="PackedScene" id=16]
[ext_resource path="res://Sprites/Misc/EscapeTheDungeon_Logo.png" type="Texture" id=17]
[ext_resource path="res://Enemies/Soulless/Soulless [3].png" type="Texture" id=18]
[ext_resource path="res://Enemies/Soulless/Soulless [1].png" type="Texture" id=19]
[ext_resource path="res://Enemies/Soulless/Soulless [2].png" type="Texture" id=20]
[ext_resource path="res://Sprites/Misc/Skull.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Misc/New Game.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Misc/Continue.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Misc/Settings.png" type="Texture" id=24]
[ext_resource path="res://Audio/Music/TitleScreen.wav" type="AudioStream" id=25]
[ext_resource path="res://Sprites/Misc/Blue Potion.png" type="Texture" id=26]
[ext_resource path="res://Audio/SFX/General Sounds/Menu Sounds/sfx_menu_select2.wav" type="AudioStream" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Animated/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Timer/ToNewGame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Music:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NewGame_SFX:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Animated/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animated/Background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buttons/NewGame:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Buttons/Continue:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Buttons/Settings:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/EscapeTheDungeon_Logo:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Music:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.31 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Canvas/FullScreen:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprites/AnimatedSprite:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprites/Skull:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TitleHero/Hero:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "ToSettings"
tracks/0/type = "value"
tracks/0/path = NodePath("Animated/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.490196 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Buttons/NewGame:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buttons/Continue:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Buttons/Settings:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/EscapeTheDungeon_Logo:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Canvas/FullScreen:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/AnimatedSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprites/Skull:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TitleHero/Hero:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( -0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="BΞTΛ" type="Sprite" parent="Canvas"]
visible = false
position = Vector2( 1859.39, 1056.16 )
scale = Vector2( 0.128495, 0.124595 )
texture = ExtResource( 2 )

[node name="FullScreen" type="Sprite" parent="Canvas"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 416, 192 )
scale = Vector2( 1.47212, 1.47212 )
texture = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 1088 )
texture = ExtResource( 4 )

[node name="TileSet" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 65528, 8, 0, 65529, 11, 0, 65530, 51, 0, 65531, 11, 0, 65532, 11, 0, 65533, 11, 0, 65534, 51, 0, 65535, 11, 0, 0, 11, 0, 1, 51, 0, 2, 11, 0, 3, 51, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 8, 11, 0, 9, 11, 0, 10, 11, 0, 11, 51, 0, 12, 11, 0, 13, 51, 0, 14, 11, 0, 15, 11, 0, 16, 51, 0, 17, 11, 0, 18, 11, 0, 19, 11, 0, 20, 51, 0, 21, 12, 0, 131064, 30, 0, 131065, 28, 0, 131066, 52, 0, 131067, 0, 0, 131068, 28, 0, 131069, 3, 0, 131070, 52, 0, 131071, 28, 0, 65536, 28, 0, 65537, 52, 0, 65538, 2, 0, 65539, 52, 0, 65540, 28, 0, 65541, 28, 0, 65542, 24, 0, 65543, 28, 0, 65544, 28, 0, 65545, 28, 0, 65546, 28, 0, 65547, 52, 0, 65548, 2, 0, 65549, 52, 0, 65550, 28, 0, 65551, 28, 0, 65552, 52, 0, 65553, 3, 0, 65554, 28, 0, 65555, 0, 0, 65556, 52, 0, 65557, 29, 0, 196600, 30, 0, 196601, 28, 0, 196602, 52, 0, 196603, 28, 0, 196604, 25, 0, 196605, 28, 0, 196606, 52, 0, 196607, 28, 0, 131072, 28, 0, 131073, 52, 0, 131074, 28, 0, 131075, 52, 0, 131076, 28, 0, 131077, 28, 0, 131078, 28, 0, 131079, 28, 0, 131080, 28, 0, 131081, 25, 0, 131082, 28, 0, 131083, 52, 0, 131084, 28, 0, 131085, 52, 0, 131086, 28, 0, 131087, 24, 0, 131088, 52, 0, 131089, 28, 0, 131090, 28, 0, 131091, 33, 0, 131092, 52, 0, 131093, 29, 0, 262136, 30, 0, 262137, 28, 0, 262138, 52, 0, 262139, 28, 0, 262140, 28, 0, 262141, 28, 0, 262142, 52, 0, 262143, 23, 0, 196608, 28, 0, 196609, 52, 0, 196610, 28, 0, 196611, 52, 0, 196612, 28, 0, 196613, 31, 0, 196614, 28, 0, 196615, 28, 0, 196616, 28, 0, 196617, 28, 0, 196618, 28, 0, 196619, 52, 0, 196620, 28, 0, 196621, 52, 0, 196622, 28, 0, 196623, 28, 0, 196624, 52, 0, 196625, 28, 0, 196626, 28, 0, 196627, 28, 0, 196628, 52, 0, 196629, 29, 0, 327672, 1, 0, 327673, 1, 0, 327674, 53, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 53, 0, 327679, 1, 0, 262144, 1, 0, 262145, 53, 0, 262146, 1, 0, 262147, 53, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 53, 0, 262156, 1, 0, 262157, 53, 0, 262158, 1, 0, 262159, 1, 0, 262160, 53, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 53, 0, 262165, 1, 0, 393208, 5, 0, 393209, 5, 0, 393210, 5, 0, 393211, 5, 0, 393212, 5, 0, 393213, 5, 0, 393214, 5, 0, 393215, 5, 0, 327680, 5, 0, 327681, 47, 0, 327682, 46, 0, 327683, 45, 0, 327684, 44, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 47, 0, 327691, 46, 0, 327692, 45, 0, 327693, 44, 0, 327694, 5, 0, 327695, 5, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 327701, 5, 0, 458744, 5, 0, 458745, 5, 0, 458746, 5, 0, 458747, 5, 0, 458748, 5, 0, 458749, 5, 0, 458750, 5, 0, 458751, 5, 0, 393216, 5, 0, 393217, 48, 0, 393218, 49, 0, 393219, 50, 0, 393220, 43, 0, 393221, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 48, 0, 393227, 49, 0, 393228, 50, 0, 393229, 43, 0, 393230, 5, 0, 393231, 5, 0, 393232, 5, 0, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 393236, 5, 0, 393237, 5, 0, 524280, 5, 0, 524281, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 5, 0, 524287, 5, 0, 458752, 5, 0, 458753, 39, 0, 458754, 40, 0, 458755, 41, 0, 458756, 42, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 39, 0, 458763, 40, 0, 458764, 41, 0, 458765, 42, 0, 458766, 5, 0, 458767, 5, 0, 458768, 5, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458772, 5, 0, 458773, 5, 0, 589816, 4, 0, 589817, 4, 0, 589818, 7, 0, 589819, 7, 0, 589820, 4, 0, 589821, 4, 0, 589822, 4, 0, 589823, 4, 0, 524288, 9, 0, 524289, 4, 0, 524290, 16, 0, 524291, 19, 0, 524292, 7, 0, 524293, 4, 0, 524294, 9, 0, 524295, 7, 0, 524296, 7, 0, 524297, 4, 0, 524298, 7, 0, 524299, 16, 0, 524300, 19, 0, 524301, 9, 0, 524302, 4, 0, 524303, 9, 0, 524304, 7, 0, 524305, 4, 0, 524306, 9, 0, 524307, 4, 0, 524308, 9, 0, 524309, 4, 0, 655352, 8, 0, 655353, 11, 0, 655354, 11, 0, 655355, 11, 0, 655356, 11, 0, 655357, 51, 0, 655358, 11, 0, 655359, 11, 0, 589824, 51, 0, 589825, 8, 0, 589826, 16, 0, 589827, 19, 0, 589828, 8, 0, 589829, 13, 0, 589830, 51, 0, 589831, 13, 0, 589832, 51, 0, 589833, 13, 0, 589834, 12, 0, 589835, 16, 0, 589836, 19, 0, 589837, 12, 0, 589838, 51, 0, 589839, 11, 0, 589840, 11, 0, 589841, 51, 0, 589842, 11, 0, 589843, 11, 0, 589844, 11, 0, 589845, 12, 0, 720888, 30, 0, 720889, 28, 0, 720890, 28, 0, 720891, 28, 0, 720892, 28, 0, 720893, 52, 0, 720894, 28, 0, 720895, 27, 0, 655360, 52, 0, 655361, 29, 0, 655362, 14, 0, 655363, 17, 0, 655364, 30, 0, 655365, 22, 0, 655366, 52, 0, 655367, 21, 0, 655368, 52, 0, 655369, 20, 0, 655370, 29, 0, 655371, 14, 0, 655372, 17, 0, 655373, 30, 0, 655374, 52, 0, 655375, 28, 0, 655376, 23, 0, 655377, 52, 0, 655378, 28, 0, 655379, 28, 0, 655380, 31, 0, 655381, 29, 0, 786424, 1, 0, 786425, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 53, 0, 786430, 1, 0, 786431, 6, 0, 720896, 53, 0, 720897, 1, 0, 720898, 5, 0, 720899, 5, 0, 720900, 1, 0, 720901, 32, 0, 720902, 53, 0, 720903, 34, 0, 720904, 53, 0, 720905, 35, 0, 720906, 1, 0, 720907, 5, 0, 720908, 5, 0, 720909, 1, 0, 720910, 53, 0, 720911, 1, 0, 720912, 1, 0, 720913, 53, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 851960, 5, 0, 851961, 5, 0, 851962, 5, 0, 851963, 5, 0, 851964, 5, 0, 851965, 5, 0, 851966, 5, 0, 851967, 5, 0, 786432, 5, 0, 786433, 5, 0, 786434, 5, 0, 786435, 5, 0, 786436, 5, 0, 786437, 47, 0, 786438, 45, 0, 786439, 45, 0, 786440, 46, 0, 786441, 44, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 917496, 5, 0, 917497, 5, 0, 917498, 5, 0, 917499, 5, 0, 917500, 5, 0, 917501, 5, 0, 917502, 5, 0, 917503, 5, 0, 851968, 5, 0, 851969, 5, 0, 851970, 5, 0, 851971, 5, 0, 851972, 5, 0, 851973, 48, 0, 851974, 49, 0, 851975, 50, 0, 851976, 50, 0, 851977, 43, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 983032, 5, 0, 983033, 5, 0, 983034, 5, 0, 983035, 5, 0, 983036, 5, 0, 983037, 5, 0, 983038, 5, 0, 983039, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917509, 39, 0, 917510, 40, 0, 917511, 41, 0, 917512, 40, 0, 917513, 42, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 1048568, 5, 0, 1048569, 5, 0, 1048570, 5, 0, 1048571, 5, 0, 1048572, 5, 0, 1048573, 5, 0, 1048574, 5, 0, 1048575, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 1114104, 5, 0, 1114105, 5, 0, 1114106, 5, 0, 1114107, 5, 0, 1114108, 5, 0, 1114109, 5, 0, 1114110, 5, 0, 1114111, 5, 0, 1048576, 5, 0, 1048577, 5, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048581, 5, 0, 1048582, 5, 0, 1048583, 5, 0, 1048584, 5, 0, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1179640, 5, 0, 1179641, 5, 0, 1179642, 5, 0, 1179643, 5, 0, 1179644, 5, 0, 1179645, 5, 0, 1179646, 5, 0, 1179647, 5, 0, 1114112, 5, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 5, 0, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1245176, 5, 0, 1245177, 5, 0, 1245178, 5, 0, 1245179, 5, 0, 1245180, 5, 0, 1245181, 5, 0, 1245182, 5, 0, 1245183, 5, 0, 1179648, 5, 0, 1179649, 5, 0, 1179650, 5, 0, 1179651, 5, 0, 1179652, 5, 0, 1179653, 5, 0, 1179654, 5, 0, 1179655, 5, 0, 1179656, 5, 0, 1179657, 5, 0, 1179658, 5, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179668, 5, 0, 1179669, 5, 0 )

[node name="MouseRotation" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 960, 896 )
rotation = -1.5708

[node name="Camera" type="Camera2D" parent="MouseRotation"]
visible = false
position = Vector2( 512, 0.00189209 )
current = true
smoothing_enabled = true
smoothing_speed = 2.0

[node name="TitleHero" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( -1216, 736 )
scale = Vector2( 1.03034, 0.971128 )
script = ExtResource( 7 )

[node name="Hero" type="AnimatedSprite" parent="TitleHero"]
frames = SubResource( 1 )
animation = "Run"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleHero"]
shape = SubResource( 2 )

[node name="Sprites" type="Node" parent="."]

[node name="LightPost" parent="Sprites" instance=ExtResource( 16 )]
position = Vector2( 961.496, 864 )
frame = 0

[node name="LightPost2" parent="Sprites" instance=ExtResource( 16 )]
position = Vector2( 1792, 1664 )
frame = 2

[node name="LightPost3" parent="Sprites" instance=ExtResource( 16 )]
position = Vector2( 128, 1664 )
frame = 2

[node name="Sprite" type="Sprite" parent="Sprites"]

[node name="EscapeTheDungeon_Logo" type="Sprite" parent="Sprites"]
modulate = Color( 1, 1, 1, 0.117647 )
position = Vector2( 960, 256 )
scale = Vector2( 0.470805, 0.426667 )
texture = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprites"]
position = Vector2( 1536, 768 )
frames = SubResource( 3 )
frame = 3
playing = true
flip_h = true

[node name="Skull" type="Sprite" parent="Sprites"]
position = Vector2( 976, 1680 )
texture = ExtResource( 21 )

[node name="Buttons" type="Node" parent="."]
pause_mode = 1

[node name="NewGame" type="TextureButton" parent="Buttons"]
modulate = Color( 1, 1, 1, 0.217391 )
margin_top = 560.0
margin_right = 1982.0
margin_bottom = 687.0
rect_scale = Vector2( 0.371361, 0.757073 )
texture_normal = ExtResource( 22 )
expand = true

[node name="Continue" type="TextureButton" parent="Buttons"]
modulate = Color( 1, 1, 1, 0.217391 )
margin_left = 1152.0
margin_top = 560.0
margin_right = 1888.0
margin_bottom = 656.0
texture_normal = ExtResource( 23 )
expand = true

[node name="Settings" type="TextureButton" parent="Buttons"]
modulate = Color( 1, 1, 1, 0.217391 )
margin_left = 624.0
margin_top = 1488.0
margin_right = 1344.0
margin_bottom = 1584.0
texture_normal = ExtResource( 24 )
expand = true

[node name="Timer" type="Node" parent="."]
editor/display_folded = true

[node name="WalkTimer" type="Timer" parent="Timer"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ToNewGame" type="Timer" parent="Timer"]

[node name="Animated" type="AnimationPlayer" parent="."]
anims/ToNewGame = SubResource( 4 )
anims/ToScreen = SubResource( 5 )
anims/ToSettings = SubResource( 6 )

[node name="Background" type="Sprite" parent="Animated"]
visible = false
light_mask = 2
position = Vector2( 1005.92, 1162.85 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -80.0
autoplay = true

[node name="Blue Potion" type="Sprite" parent="Music"]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
position = Vector2( 2238, 1210 )
scale = Vector2( 0.71875, 0.718749 )
texture = ExtResource( 26 )

[node name="NewGame_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -15.0
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="timeout" from="Timer/WalkTimer" to="TitleHero" method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="Timer/ToNewGame" to="." method="_on_ToNewGame_timeout"]
[connection signal="finished" from="Music" to="." method="_on_AudioStreamPlayer_finished"]
